seata单独依赖模块

--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,13 @@
                 <version>${ruoyi.version}</version>
             </dependency>
 
+            <!-- 分布式事务 -->
+            <dependency>
+                <groupId>com.ruoyi</groupId>
+                <artifactId>ruoyi-common-seata</artifactId>
+                <version>${ruoyi.version}</version>
+            </dependency>
+
             <!-- 日志记录 -->
             <dependency>
                 <groupId>com.ruoyi</groupId>
