--- a/ruoyi-modules/pom.xml
+++ b/ruoyi-modules/pom.xml
@@ -14,6 +14,7 @@
         <module>ruoyi-job</module>
         <module>ruoyi-file</module>
         <module>okx</module>
+        <module>pandora</module>
     </modules>
 
     <artifactId>ruoyi-modules</artifactId>
