--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -18,6 +18,7 @@
         <module>ruoyi-common-datascope</module>
         <module>ruoyi-common-datasource</module>
         <module>common-mybatis</module>
+        <module>common-rabbitmq</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
