--- a/ruoyi-modules/okx/pom.xml
+++ b/ruoyi-modules/okx/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>ruoyi-common-swagger</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common-redis</artifactId>
+        </dependency>
+
 
 
 
