--- a/ruoyi-common/common-rabbitmq/pom.xml
+++ b/ruoyi-common/common-rabbitmq/pom.xml
@@ -23,19 +23,21 @@
             <artifactId>ruoyi-common-core</artifactId>
         </dependency>
 
+
+        <!--rabbitmq-->
         <dependency>
-            <groupId>com.rabbitmq</groupId>
-            <artifactId>amqp-client</artifactId>
-            <version>5.17.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit</artifactId>
-            <version>1.7.10.RELEASE</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.projectlombok</groupId>
